kube/opa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa
  namespace: policy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:latest
          imagePullPolicy: IfNotPresent
          args:
            - "run"
            - "--server"
            - "--addr=0.0.0.0:8181"
            - "/policies"
          volumeMounts:
            - mountPath: /policies
              name: opa-policies
      volumes:
        - name: opa-policies
          configMap:
            name: opa-policies
